Fix db connection problem

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com</groupId>
 	<artifactId>fillexc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>fillexc</name>
 	<description>Demo project for Spring Boot</description>
 
