Create more test case and fix problem with constructors

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,11 @@
 spring:
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:fillexc
+    driverClassName: org.h2.Driver
   jpa:
-    database: H2
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
