--- a/pom.xml
+++ b/pom.xml
@@ -81,20 +81,12 @@
 			<scope>compile</scope>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
-	<profiles>
-		<profile>
-			<id>local</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-				<property>
-					<name>spring.profiles.active</name>
-					<value>local</value>
-				</property>
-			</activation>
-		</profile>
-	</profiles>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -120,7 +112,8 @@
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.5</version>
+				<version>1.2.0</version>
+
 				<configuration>
 					<imageName>fillexc</imageName>
 					<baseImage>java</baseImage>
@@ -133,6 +126,13 @@
 						</resource>
 					</resources>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>javax.activation</groupId>
+						<artifactId>activation</artifactId>
+						<version>1.1.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
