--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,6 @@
 spring:
+  liquibase:
+    contexts: master
   datasource:
     url: jdbc:postgresql://fillexc-db/fillexc?createDatabaseIfNotExist=true
     driver-class-name: org.postgresql.Driver
